@@ -81,10 +81,11 @@ let tag_any tags =
 let check_tags_usage useful_tags =
   let check_tag (tag, loc) =
     if not (Tags.mem tag useful_tags) then
-      Log.eprintf "%aWarning: the tag %S is not used in any flag declaration, \
-                   so it will have no effect; it may be a typo. Otherwise use \
-                   `mark_tag_used` in your myocamlbuild.ml to disable \
-                   this warning."
+
+      Log.eprintf "%aWarning: the tag %S is not used in any flag or dependency \
+                   declaration, so it will have no effect; it may be a typo. \
+                   Otherwise you can use `mark_tag_used` in your myocamlbuild.ml \
+                   to disable this warning."
         Loc.print_loc loc tag
   in
   let check_conf (_, values) =
